Color Contrast Fix

--- a/techdegree/proj8/css/styles.css
+++ b/techdegree/proj8/css/styles.css
@@ -10,7 +10,7 @@ body {
 	padding: 0;
 	text-align: center;
 	font-family: 'Lato', sans-serif;
-	color: #02eabb;
+	color: #f2f2f2;
 	background: #2d2b30;
 }
 fieldset {
